--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
     "vue": "^3.2.13",
+    "vue-cookies": "^1.8.4",
     "vue-router": "^4.3.2",
     "vuex": "^4.0.2"
   },
